--- a/assets/css/frontend/become-member.css
+++ b/assets/css/frontend/become-member.css
@@ -10,6 +10,10 @@
   padding-right:80px;
 }
 
+#tta-become-member-wrap{
+  padding-top:0px;
+}
+
 .tta-membership-table {
   width: 100%;
   border-collapse: collapse;
