--- a/assets/css/frontend/cart-page.css
+++ b/assets/css/frontend/cart-page.css
@@ -159,7 +159,7 @@
   #tta-cart-container > div > table > tfoot > tr > td { padding-left:8px; text-align:center; }
   #tta-cart-container > div > table > tfoot{ display: block; width: 100%; margin-top:70px; }
   #tta-cart-container > div > table > tfoot > tr > th{ width: 100%; display: block; text-align: center; margin-bottom:10px;}
-  #tta-cart-container > div > table > tbody > tr > td:nth-child(6){ text-align:center; padding-left:0; border:none; padding-top:0;}
+  #tta-cart-container > div > table > tbody > tr > td:last-child{ text-align:center; padding-left:0; border:none; padding-top:0;}
   .tta-cart-table thead { display:none; }
   .tta-tooltip-icon{ display: none; }
   .tta-cart-table, .tta-cart-table tbody, .tta-cart-table tr, .tta-cart-table td { display:block; width:100%; }
