--- a/assets/css/frontend/login-register.css
+++ b/assets/css/frontend/login-register.css
@@ -42,6 +42,11 @@
   color: #4a4a4a;
 }
 
+.tta-section-intro a.tta-join-link {
+  color: #3a7096;
+  font-weight: 700;
+}
+
 .tta-login-form #loginform p {
   display: flex;
   flex-direction: column;
