Update alert bar and partner license styles

--- a/assets/css/frontend/alert-bar.css
+++ b/assets/css/frontend/alert-bar.css
@@ -29,3 +29,120 @@
 	font-weight:bold;
 	text-decoration:underline;
 }
+
+.tta-license-toggle{
+	width: 100%;
+    margin-bottom: 5px;
+}
+
+.tta-license-toggle .tta-license-col-lastname{
+	margin-right:0px;
+}
+
+.tta-license-toggle .tta-license-col-firstname{
+	margin-right:5px;
+}
+
+#tta-license-results{
+	margin-top:20px;
+}
+
+.tta-license-section.tta-license-summary ul{
+	margin-left: 0px;
+}
+
+.tta-license-section.tta-license-summary ul li{
+	display: inline-block;
+    margin-right: 10px;
+    margin-left: 0px;
+}
+
+#tab-licenses .tta-section-intro{
+	font-size: 13px;
+}
+
+.tta-section-intro a{
+	font-weight:bold;
+}
+
+.tta-pages-span{
+	display:block;
+	margin-top: 3px;
+}
+
+.tta-license-pagination{
+	margin-top:20px;
+}
+
+.tta-license-page-prev-button{
+	margin-right:10px;
+}
+
+.tta-license-panel{
+	padding-left: 10px;
+    margin-bottom: 10px;
+}
+
+.tta-license-panel p{
+	display: inline-block;
+    margin-right: 10px;
+    margin-bottom: 0;
+}
+
+.tta-license-section.tta-license-summary, .tta-bulk-upload-license-section, .tta-license-single-add, .tta-license-search{
+	background-color: #eee;
+    border-radius: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    padding-top: 1px;
+}
+
+.tta-bulk-upload-license-section, .tta-license-single-add, .tta-license-search{
+	margin-top: 20px;
+}
+
+#tta-license-upload-btn{
+	border-bottom-color:rgb(0, 0, 0);
+	border-bottom-style:outset;
+	border-bottom-width:1px;
+	border-image-outset:0;
+	border-image-repeat:stretch;
+	border-image-slice:100%;
+	border-image-source:none;
+	border-image-width:1;
+	border-left-color:rgb(0, 0, 0);
+	border-left-style:outset;
+	border-left-width:1px;
+	border-right-color:rgb(0, 0, 0);
+	border-right-style:outset;
+	border-right-width:1px;
+	border-top-color:rgb(0, 0, 0);
+	border-top-style:outset;
+	border-top-width:1px;
+	display: block;
+    margin-top: 5px;
+    border-radius: 3px;
+}
+
+.tta-license-upload-progress-holder{
+	margin-top:10px;
+}
+
+.tta-license-upload-progress-holder .tta-license-upload-progress-bar-div{
+	display: inline-block;
+	width:80%;
+	vertical-align:middle;
+}
+
+.tta-license-upload-progress-holder .tta-license-upload-spinner-div{
+	display: inline-block;
+	width:10%;
+}
+
+#tta-license-upload-response{
+	background-color: red;
+    border: solid 1px blue;
+    border-radius: 10px;
+    margin-bottom: 0;
+}
