--- a/assets/css/backend/admin.css
+++ b/assets/css/backend/admin.css
@@ -268,6 +268,10 @@ form p.submit{
   animation: tta-fade-slide-down 0.3s ease-out;
 }
 
+.tta-bi-inline-container {
+  min-height: 40px;
+}
+
 .tta-delete-new-ticket img, .tta-delete-ticket img{
     width: 15px;
     top: 2px;
