--- a/assets/css/backend/admin.css
+++ b/assets/css/backend/admin.css
@@ -272,6 +272,11 @@ form p.submit{
   min-height: 40px;
 }
 
+.tta-bi-metric-value {
+  font-weight: 600;
+  margin-left: 6px;
+}
+
 .tta-delete-new-ticket img, .tta-delete-ticket img{
     width: 15px;
     top: 2px;
